make Node class abstract, add objects depending on NodeType, add LIST and BLOB, refactor code