@@ -1,41 +1,135 @@
 package io.github.rukins.gkeepapi.utils;
 
-import io.github.rukins.gkeepapi.exception.BadNodeTypeException;
-import io.github.rukins.gkeepapi.model.NodePair;
-import io.github.rukins.gkeepapi.model.node.NodeResponse;
-import io.github.rukins.gkeepapi.model.node.nodeentity.Node;
-import io.github.rukins.gkeepapi.model.node.userinfo.Label;
-import io.github.rukins.gkeepapi.model.node.userinfo.UserInfo;
+import io.github.rukins.gkeepapi.model.NodeResponse;
+import io.github.rukins.gkeepapi.model.node.NodeType;
+import io.github.rukins.gkeepapi.model.node.nodeobject.*;
+import io.github.rukins.gkeepapi.model.userinfo.Label;
+import io.github.rukins.gkeepapi.model.userinfo.UserInfo;
 
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
 public class NodeUtils {
-    public static List<NodePair> getAllNodePairs(List<Node> allNodes) {
-        Map<String, Node> idAndNodeMap = allNodes.stream().collect(Collectors.toMap(Node::getId, n -> n));
+    public static List<Node> getAssembledNodeList(List<Node> allNodes) {
+        if (allNodes == null) {
+            return null;
+        }
 
-        return allNodes.stream()
-                .filter(n -> !n.getParentId().equals("root"))
-                .map(n -> {
-                    try {
-                        return new NodePair(idAndNodeMap.get(n.getParentId()), n);
-                    } catch (BadNodeTypeException e) {
-                        return null;
-                    }
-                }).toList();
+        List<Node> result = new ArrayList<>();
+
+        Map<String, List<Node>> idAndNodeListMap = allNodes.stream().collect(
+                Collectors.groupingBy(
+                        n -> {
+                            if (n.getType() == NodeType.NOTE || n.getType() == NodeType.LIST) {
+                                return n.getId();
+                            }
+                            return n.getParentId();
+                        },
+                        Collectors.toList()
+                )
+        );
+
+        for (List<Node> nodeList : idAndNodeListMap.values()) {
+            Node noteOrList = nodeList.stream()
+                    .filter(n -> n.getType() == NodeType.NOTE || n.getType() == NodeType.LIST)
+                    .findFirst().orElse(null);
+
+            if (noteOrList != null) {
+                List<ListItemNode> listItems = nodeList.stream()
+                        .filter(n -> n.getType() == NodeType.LIST_ITEM)
+                        .map(n -> (ListItemNode) n)
+                        .toList();
+
+                List<BlobNode> blobs = nodeList.stream()
+                        .filter(n -> n.getType() == NodeType.BLOB)
+                        .map(n -> (BlobNode) n)
+                        .toList();
+
+                if (noteOrList instanceof NoteNode) {
+                    if (listItems.size() > 0)
+                        ((NoteNode) noteOrList).setListItemNode(listItems.get(0));
+                    ((NoteNode) noteOrList).setBlobNodes(blobs);
+                }
+                if (noteOrList instanceof ListNode) {
+                    ((ListNode) noteOrList).setListItemNodes(listItems);
+                    ((ListNode) noteOrList).setBlobNodes(blobs);
+                }
+                result.add(noteOrList);
+            }
+        }
+
+        return result;
     }
 
-    public static NodePair getNodePairById(String noteId, List<Node> allNodes) throws BadNodeTypeException {
-        return new NodePair(
-                allNodes.stream()
-                        .filter(n -> noteId.equals(n.getId()) || noteId.equals(n.getParentId()))
-                        .sorted()
-                        .toList()
-        );
+    public static NoteNode getNoteNodeById(String noteNoteId, List<Node> allNodes) {
+        return getNoteNodeById(noteNoteId, allNodes, true);
+    }
+
+    public static NoteNode getNoteNodeById(String noteNoteId, List<Node> allNodes, boolean isNodeListAssembled) {
+        Node node;
+
+        if (isNodeListAssembled) {
+            node = allNodes.stream().filter(n -> noteNoteId.equals(n.getId())).findFirst().orElse(null);
+
+            return node instanceof NoteNode ? (NoteNode) node : null;
+        } else {
+            Map<NodeType, List<Node>> nodeTypeAndNodeMap = allNodes.stream()
+                    .filter(n -> noteNoteId.equals(n.getId()) || noteNoteId.equals(n.getParentId()))
+                    .collect(Collectors.groupingBy(Node::getType, Collectors.toList()));
+
+            if (nodeTypeAndNodeMap.get(NodeType.NOTE) != null
+                    && nodeTypeAndNodeMap.get(NodeType.NOTE).size() == 1) {
+                NoteNode noteNode = (NoteNode) nodeTypeAndNodeMap.get(NodeType.NOTE).get(0);
+
+                if (nodeTypeAndNodeMap.get(NodeType.LIST_ITEM).size() == 1) {
+                    noteNode.setListItemNode((ListItemNode) nodeTypeAndNodeMap.get(NodeType.LIST_ITEM).get(0));
+                }
+                noteNode.setBlobNodes(nodeTypeAndNodeMap.get(NodeType.BLOB).stream().map(n -> (BlobNode) n).toList());
+
+                return noteNode;
+            }
+        }
+
+        return null;
+    }
+
+    public static ListNode getListNodeById(String noteNoteId, List<Node> allNodes) {
+        return getListNodeById(noteNoteId, allNodes, true);
+    }
+
+    public static ListNode getListNodeById(String listNodeId, List<Node> allNodes, boolean isNodeListAssembled) {
+        Node node;
+
+        if (isNodeListAssembled) {
+            node = allNodes.stream().filter(n -> listNodeId.equals(n.getId())).findFirst().orElse(null);
+
+            return node instanceof ListNode ? (ListNode) node : null;
+        } else {
+            Map<NodeType, List<Node>> nodeTypeAndNodeMap = allNodes.stream()
+                    .filter(n -> listNodeId.equals(n.getId()) || listNodeId.equals(n.getParentId()))
+                    .collect(Collectors.groupingBy(Node::getType, Collectors.toList()));
+
+            if (nodeTypeAndNodeMap.get(NodeType.LIST) != null
+                    && nodeTypeAndNodeMap.get(NodeType.LIST).size() == 1) {
+                ListNode listNode = (ListNode) nodeTypeAndNodeMap.get(NodeType.LIST).get(0);
+
+                listNode.setListItemNodes(
+                        nodeTypeAndNodeMap.get(NodeType.LIST_ITEM).stream().map(n -> (ListItemNode) n).toList()
+                );
+                listNode.setBlobNodes(
+                        nodeTypeAndNodeMap.get(NodeType.BLOB).stream().map(n -> (BlobNode) n).toList()
+                );
+
+                return listNode;
+            }
+        }
+
+        return null;
     }
 
     public static NodeResponse mergeNodeResponse(NodeResponse oldVersion, NodeResponse newVersion) {
@@ -79,7 +173,7 @@ public class NodeUtils {
             }
         }
 
-        return idAndNodeMap.values().stream().sorted().toList();
+        return idAndNodeMap.values().stream().toList();
     }
 
     public static UserInfo mergeUserInfo(UserInfo oldUserInfo, UserInfo newUserInfo) {
